# ratthew

./: .env  .gitignore  Cargo.toml
assets/: assets.ron  level.ldtk  sword.glb
src/: animation.rs  camera.rs  collisions.rs  config.rs  cube.rs  egui.rs  grid.rs  lib.rs  loading.rs  logging.rs  main.rs  particles.rs  spawning.rs  terminal.rs  windowed.rs
src/animation/: animation_trait.rs  grid_animated.rs  grid_blocked_tween.rs  grid_move_tween.rs  item_bob_tween.rs  mod.rs
src/animations/: grid_animated.rs  grid_blocked.rs  grid_move.rs  item_bob.rs  mod.rs  tween_cleanup.rs
src/blocks/: blank_mesh.rs  block_instances.rs  block_layer.rs  block_traits.rs  ldtk_loading.rs  mod.rs
src/blocks/billboard/: block.rs  mesh.rs  mod.rs
src/blocks/column/: block.rs  mesh.rs  mod.rs
src/blocks/ramp/: block.rs  mesh.rs  mod.rs
src/blocks/ramp_flipped/: block.rs  mesh.rs  mod.rs
src/blocks/torch/: block.rs  mod.rs  particles.rs
src/blocks/wall/: block.rs  mesh.rs  mod.rs
src/grid/: animation.rs  direction.rs  input.rs  mod.rs  movement.rs  position.rs  utilities.rs
src/levels/: collisions.rs  cube.rs  flipped_ramp.rs  layer.rs  loading.rs  mod.rs  torch_effect.rs  upright_billboard.rs  upright_cube.rs  upright_ramp.rs
src/sound/: mod.rs  player.rs
src/widgets/: debug_frame.rs  mod.rs
