[package]
name = "ratthew"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = [ "dynamic_linking", "file_watcher", "wav", "x11" ]}
ratatui = "0.29.0"
bevy_ratatui_camera = "0.12.0"
bevy_ratatui = "0.7.1"
bevy_ecs_ldtk = "0.11.0"
bevy_asset_loader = { version = "0.22.0", features = ["standard_dynamic_assets"] }
crossterm = "0.28.0"
dotenv = "0.15.0"
image = "0.25.5"
tui-logger = { version = "0.14.5", features = ["tracing-support"] }
bevy_hanabi = "0.14.0"
log = "0.4.26"
bevy_egui = { version = "0.33.0", optional = true }
egui = { version = "0.31.0", optional = true }
egui_ratatui = { version = "0.0.31", optional = true }
bevy_tween = "0.7.0"
bevy_rand = { version = "0.9.0", features = ["wyrand"] }
rand = "0.8"
bevy-persistent = { version = "0.7.0", features = ["toml"] }
serde = "1.0.219"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
egui = ["dep:bevy_egui", "dep:egui", "dep:egui_ratatui"]

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
